--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
+@import 'partials/home';
 
 .hero-unit {
     margin: 50px auto 0 auto;
