--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,3 +1,4 @@
-<div class="title">
-    <h1>Products list</h1>
+<div id='home-layout'>
+    <div id='home-title'></div>
+    <div id='home-contents'></div>
 </div>
