Actual templates for product item and list

--- a/app/templates/item/productitem_tmpl.hbs
+++ b/app/templates/item/productitem_tmpl.hbs
@@ -1,1 +1,8 @@
-{{!empty ProductitemTmpl template}}
+<div class="row">
+    <div class="col-md-8">
+        Product name: {{name}}
+    </div>
+    <div class="col-md-4">
+        Qty: {{quantity}}
+    </div>
+</div>
