--- a/app/templates/composite/productslist_tmpl.hbs
+++ b/app/templates/composite/productslist_tmpl.hbs
@@ -3,5 +3,10 @@
         <h2>These are the products of my list: </h2>
     </div>
 </div>
-
-{{!empty ProductslistTmpl template}}
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <div id="products-container">
+            <!-- Here is where each product row will be rendered -->
+        </div>
+    </div>
+</div>
