--- a/app/templates/title.hbs
+++ b/app/templates/title.hbs
@@ -1,4 +1,6 @@
-<div class="title">
-    <h1>Products list</h1>
+<div class="jumbotron">
+    <div class="title">
+        <h1>Products list</h1>
+    </div>
 </div>
 
