Make product name editable

--- a/app/templates/item/productitem_tmpl.hbs
+++ b/app/templates/item/productitem_tmpl.hbs
@@ -1,7 +1,8 @@
 <hr>
 <div class="row">
     <div class="col-md-8">
-        Product name: {{name}}
+        <label>Product name: </label>
+        <a href="#" id="name" data-mode="inline">{{name}}</a>
     </div>
     <div class="col-md-4">
         Qty: {{quantity}}
