Introduce variables partial: fix glyphicons path

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,4 @@
+@import 'partials/variables';
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import 'partials/vendor';
 @import 'partials/home';
